[144] [Contextual Tasks] Fix toolbar covering thread history in zero state
Before: https://screencast.googleplex.com/cast/NjQ3NDk0NDgxMTYzMDU5Mnw2NjA3NjMzNi1jZA
After: https://screencast.googleplex.com/cast/NDY0NTM1NzQ2MzAxMTMyOHxiNTU0YWNjMS1mMg

(cherry picked from commit ae3dc5aeaa263d38031d9bf6d41b6bcb109898f9)

Fixed: 474383297
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7416719
Commit-Queue: Duncan Mercer <mercerd@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1566552}
Bug: 475338251
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7453423
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#3419}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/chrome/browser/resources/contextual_tasks/app.css
+++ b/chrome/browser/resources/contextual_tasks/app.css
@@ -249,7 +249,7 @@ error-page {
 }
 
 /* Pseudo element to cover the AIM filter bar while in zero state. */
-:host([is-zero-state_]) #toolbarOverlay::after {
+:host([is-zero-state_]:not([is-in-basic-mode_])) #toolbarOverlay::after {
   background-color: var(--search-background-color);
   content: '';
   display: block;
